src/test/deca/context/valid/non_provided/inf.deca
// Description:
//    Affectation avec un opération de comparaison
//
// Resultats:
//    
// 
// Historique:
//    cree le 14/01/2020

{
    int x = 3;
    int y = 5;
    boolean a = x < y;
}